--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reparatii-electronice",
   "version": "0.1.0",
+  "homepage": "https://vasiliybologov.github.io/reparatii-electronice/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -12,13 +13,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
